syntax = "proto2";

package im.actor.server;

option (scalapb.options) = {
    import: "im.actor.server.api.TypeMappers._"
    import: "scala.collection.JavaConversions._"
};

import "scalapb/scalapb.proto";
import "file.proto";
import "sequence.proto";

message GroupEnvelope {
    required int32 user_id = 1;

    oneof payload {
        SendMessage send_message = 2;
        MessageReceived message_received = 3;
        MessageRead message_read = 4;
        Join join = 5;
        Kick kick = 6;
        Invite invite = 7;
        Leave leave = 8;
        Create create = 9;
        UpdateAvatar update_Avatar = 10;
    }

    message Create {
        required int32 creator_user_id = 1;
        required int64 creator_auth_id = 2;
        required string title = 3;
        required int64 random_id = 4;
        repeated int32 user_ids = 5;
    }

    message CreateResponse {
        required int64 access_hash = 1;
        required int32 seq = 2;
        required bytes state = 3;
        required int64 date = 4;
    }

    message SendMessage {
        required int32 sender_user_id = 1;
        required int64 sender_auth_id = 2;
        required int64 access_hash = 7;
        required int64 random_id = 3;
        required bytes message = 5 [(scalapb.field).type = "im.actor.api.rpc.messaging.Message"];
        required bool is_fat = 6;
    }

    message MessageReceived {
        required int32 receiver_user_id = 1;
        required int64 received_auth_id = 2;
        required int64 date = 3;
        required int64 received_date = 4;
    }

    message MessageRead {
        required int32 receiver_user_id = 1;
        required int64 received_auth_id = 2;
        required int64 date = 3;
        required int64 received_date = 4;
    }

    message Join {
        required int32 joining_user_id = 1;
        required int64 joining_user_auth_id = 2;
        required int32 inviting_user_id = 3;
    }

    message Invite {
        required int32 invitee_user_id = 1;
        required int32 inviter_user_id = 2;
        required int64 inviter_auth_id = 3;
        required int64 random_id = 4;
    }

    message Kick {
        required int32 kicked_user_id = 1;
        required int32 kicker_user_id = 2;
        required int64 kicker_auth_id = 3;
        required int64 random_id = 4;
    }

    message Leave {
        required int32 user_id = 1;
        required int64 auth_id = 2;
        required int64 random_id = 3;
    }

    message UpdateAvatar {
        required int32 client_user_id = 1;
        required int64 client_auth_id = 2;
        optional FileLocation file_location = 3;
        required int64 random_id = 4;
    }

    message UpdateAvatarResponse {
        optional bytes avatar = 1 [(scalapb.field).type = "im.actor.api.rpc.files.Avatar"];
        required SeqStateDate seqstatedate = 2;
    }
}

message GroupEvents {
    message Created {
        option (scalapb.message).extends = "im.actor.server.group.GroupEvent";

        required int32 creator_user_id = 1;
        required int64 access_hash = 3;
        required string title = 2;
        required int64 created_at = 4 [(scalapb.field).type = "org.joda.time.DateTime"];
    }

    message MessageReceived {
        option (scalapb.message).extends = "im.actor.server.group.GroupEvent";

        required int64 date = 1;
    }

    message MessageRead {
        option (scalapb.message).extends = "im.actor.server.group.GroupEvent";

        required int32 readerUserId = 1;
        required int64 date = 2;
    }

    message UserInvited {
        option (scalapb.message).extends = "im.actor.server.group.GroupEvent";

        required int32 user_id = 1;
        required int32 inviter_user_id = 2;
        required int64 date = 3;
    }

    message UserJoined {
        option (scalapb.message).extends = "im.actor.server.group.GroupEvent";

        required int32 user_id = 1;
        required int32 inviter_user_id = 2;
        required int64 date = 3;
    }

    message UserKicked {
        option (scalapb.message).extends = "im.actor.server.group.GroupEvent";

        required int32 user_id = 1;
        required int32 kicker_user_id = 2;
        required int64 date = 3;
    }

    message UserLeft {
        option (scalapb.message).extends = "im.actor.server.group.GroupEvent";

        required int32 user_id = 1;
        required int64 date = 3;
    }

    message BotAdded {
        option (scalapb.message).extends = "im.actor.server.group.GroupEvent";

        required int32 user_id = 1;
    }

    message AvatarUpdated {
        option (scalapb.message).extends = "im.actor.server.group.GroupEvent";

        optional Avatar avatar = 1;
    }
}

